firebase login authentication

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_FIREBASE_KEY = apiKey: "AIzaSyCp0hsSFfLIBYrKI2cB2lcgGzzA7zsrfwE",
+REACT_APP_FIREBASE_KEY = AIzaSyCp0hsSFfLIBYrKI2cB2lcgGzzA7zsrfwE,
